--- a/components.json
+++ b/components.json
@@ -1,15 +1,16 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
+  "style": "new-york",
+  "rsc": false,
+  "tsx": true,
   "tailwind": {
     "config": "tailwind.config.js",
     "css": "app/globals.css",
     "baseColor": "slate",
     "cssVariables": true
   },
-  "rsc": false,
   "aliases": {
-    "utils": "@/shared-core/lib/utils",
-    "components": "@/shared-core/components"
+    "components": "@/shared-core/components",
+    "utils": "@/shared-core/lib/utils"
   }
 }
