--- a/shared-core/tsconfig.json
+++ b/shared-core/tsconfig.json
@@ -17,10 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "baseUrl": ".",
+    "baseUrl": "../",
     "paths": {
       "@/*": [
         "./*"
+      ],
+      "*": [
+        "node_modules/*",
+        "../node_modules/*"
       ]
     },
     "plugins": [
