--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@tanstack/react-table": "^8.17.3",
+    "antd": "^5.20.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "konva": "^9.3.15",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
@@ -47,6 +49,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-konva": "^18.2.10",
+    "react-konva-utils": "^1.0.6",
     "sass": "^1.77.8",
     "sharp": "^0.31.3",
     "tailwind-merge": "^2.3.0",
