--- a/shared-core/package.json
+++ b/shared-core/package.json
@@ -64,8 +64,8 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/uuid": "^10",
-    "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@typescript-eslint/parser": "^5.61.0",
+    "@typescript-eslint/eslint-plugin": "6",
+    "@typescript-eslint/parser": "6",
     "autoprefixer": "^10.4.14",
     "babel-plugin-import": "^1.13.5",
     "eslint": "^8.44.0",
@@ -77,7 +77,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "husky": "^8.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
